@@ -209,6 +209,7 @@ class CanDoExternalActivityProjectTotal(CanDoExternalActivityProject):
 
     def getGrade(self, student):
         numComps = totalPoints = 0
+        ss = None
         for competency in self.project.values():
             numComps += 1
             ev = self.gradebook.getScore(student, competency)
@@ -216,13 +217,13 @@ class CanDoExternalActivityProjectTotal(CanDoExternalActivityProject):
                 continue
             value = ev.scoreSystem.getNumericalValue(ev.value)
             totalPoints += value
+            if not ss:
+                ss = ev.scoreSystem
         if numComps:
-            # XXX: should return a Decimal percentage representing the
-            # grade for the given student, i.e. a value between 0 and 1.
-            # ss = ev.scoreSystem
-            # bestScore = ss.getNumericalValue(ev.getBestScore())
-            # return Decimal(totalPoints) / Decimal(numComps) / bestScore
-            return Decimal(totalPoints) / Decimal(numComps)
+            if not totalPoints:
+                return Decimal(0)
+            bestScore = ss.getNumericalValue(ss.getBestScore())
+            return Decimal(totalPoints) / Decimal(numComps) / bestScore
         return None
 
 
@@ -280,6 +281,7 @@ class CanDoExternalActivitySectionTotal(CanDoExternalActivitySection):
 
     def getGrade(self, student):
         numComps = totalPoints = 0
+        ss = None
         for skillset in ISectionSkills(self.section).values():
             gradebook = ISkillsGradebook(skillset)
             for competency in skillset.values():
@@ -289,10 +291,13 @@ class CanDoExternalActivitySectionTotal(CanDoExternalActivitySection):
                     continue
                 value = ev.scoreSystem.getNumericalValue(ev.value)
                 totalPoints += value
+                if not ss:
+                    ss = ev.scoreSystem
         if numComps:
-            # XXX: should return a Decimal percentage representing the
-            # grade for the given student, i.e. a value between 0 and 1.
-            return Decimal(totalPoints) / Decimal(numComps)
+            if not totalPoints:
+                return Decimal(0)
+            bestScore = ss.getNumericalValue(ss.getBestScore())
+            return Decimal(totalPoints) / Decimal(numComps) / bestScore
         return None
 
 
